--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <link rel="stylesheet" type="text/css" href="./css/fancybox.css">
   <link rel="stylesheet" type="text/css" href="./css/main_style.css" title="wsite-theme-css">
 
+  <!-- Header -->
   <head>
     <meta charset="UTF-8" />
     <title>Yu-Man Tam - Home</title>
   </head>
 
+  <! -- Name -->
   <body class="no-header-page  wsite-theme-light  wsite-page-index"><div id="header-wrap">
     <div class="container">
       <table id="header">
@@ -28,6 +30,8 @@
         </tbody>
       </table>   
     </div>
+	  
+    <!-- Webpage tabs -->	  
     <div id="topnav-wrap">
     <div class="container">
       <table>
