--- a/index.html
+++ b/index.html
@@ -52,50 +52,49 @@
               <li id="pg694585789263446460" class="wsite-menu-item-wrap   wsite-nav-3" style="position: relative;">
                 <a href="./research.html" class="wsite-menu-item" style="position: relative;">
                   Research
-              </a>
+                </a>
+              </li>
+                </ul>
+                <div style="clear:both"></div>
+                </div>
+                </td>
+                <td><div class="search"></div></td>
+                </tr>
+        </tbody></table>
+    <div style="clear:both;"></div>
+    </div></div>
 
-                          </li>
-                      </ul>
-                      <div style="clear:both"></div>
-                  </div>
-              </td>
-              <td><div class="search"></div></td>
-            </tr>
-      </tbody></table>
-      <div style="clear:both;"></div>
-    </div>
-		</div>
-
-<div id="main-wrap">
+    <!-- Information -->
+    <div id="main-wrap">
     <div class="container">
-        <div id="main">
-            <div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<div><div class="wsite-multicol"><div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
-	<table class="wsite-multicol-table">
-		<tbody class="wsite-multicol-tbody">
-			<tr class="wsite-multicol-tr">
-				<td class="wsite-multicol-col" style="width:66.295546558704%; padding:0 15px;">
+    <div id="main">
+    <div id="content"><div id="wsite-content" class="wsite-elements wsite-not-footer">
+    <div><div class="wsite-multicol"><div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
+    <table class="wsite-multicol-table">
+    <tbody class="wsite-multicol-tbody">
+    <tr class="wsite-multicol-tr">
+    <td class="wsite-multicol-col" style="width:66.295546558704%; padding:0 15px;">
 					
-		<div class="paragraph" style="text-align:left;">
-						<font size="4"><strong>Financial Economist</strong></font><br>
-						<font size="4"><strong>Division of Market Risk Analysis</strong></font><br>
-						<font size="4"><strong>Office of the Comptroller of the Currency</strong></font><br>
-						<font size="4"><strong>U.S. Department of Treasury</strong></font><br><br>
-						<font size="4"><br><strong><u>Research Fields:</u></strong><br>Macro-Finance, Asset Pricing, Risk Management</font>
-						<font size="4"><br><br><strong><u>Contact Information</u></strong><br>
-										<strong>Email:</strong>&nbsp;<font color="#2a2a2a"><a href="yuman.tam@occ.treas.gov">yuman.tam@occ.treas.gov</a></font><br>
-										<strong>Phone:</strong>&nbsp;<font color="#2a2a2a">202-649-5671</font><br><br>
-										<strong>Address:</strong><br>Division of Market Risk Analysis
-																						 <br>Office of the Comptroller of the Currency</font>
-																						 <br><font size="4">400 7th Street SW </font>
-																						 <br><font size="4">Washington, D.C. 20219 </font>
-																						 <br><br></div>
-			<td class="wsite-multicol-col" style="width:33.704453441296%; padding:0 15px;">
-									
-			<div class="wsite-image wsite-image-border-none " 
-											style="padding-top:5px;padding-bottom:10px;margin-left:0px;margin-right:10px;text-align:right">
-				<a><img src="./img/YuMan_Tam_JM_Pic.jpeg" alt="Picture" style="width:auto;max-width:100%"></a>
-				<div style="display:block;font-size:90%"></div>
-			</div>
-	</body>
+    <div class="paragraph" style="text-align:left;">
+    <font size="4"><strong>Financial Economist</strong></font><br>
+    <font size="4"><strong>Division of Market Risk Analysis</strong></font><br>
+    <font size="4"><strong>Office of the Comptroller of the Currency</strong></font><br>
+    <font size="4"><strong>U.S. Department of Treasury</strong></font><br><br>
+    <font size="4"><br><strong><u>Research Fields:</u></strong><br>Macro-Finance, Asset Pricing, Risk Management</font>
+    <font size="4"><br><br><strong><u>Contact Information</u></strong><br>
+    <strong>Email:</strong>&nbsp;<font color="#2a2a2a"><a href="yuman.tam@occ.treas.gov">yuman.tam@occ.treas.gov</a></font><br>
+    <strong>Phone:</strong>&nbsp;<font color="#2a2a2a">202-649-5671</font><br><br>
+    <strong>Address:</strong><br>Division of Market Risk Analysis
+    <br>Office of the Comptroller of the Currency</font>
+    <br><font size="4">400 7th Street SW </font>
+    <br><font size="4">Washington, D.C. 20219 </font>
+    <br><br></div>
+	  
+    <!-- Profile Picture -->
+    <td class="wsite-multicol-col" style="width:33.704453441296%; padding:0 15px;">
+    <div class="wsite-image wsite-image-border-none " 
+    style="padding-top:5px;padding-bottom:10px;margin-left:0px;margin-right:10px;text-align:right">
+    <a><img src="./img/YuMan_Tam_JM_Pic.jpeg" alt="Picture" style="width:auto;max-width:100%"></a>
+    <div style="display:block;font-size:90%"></div></div>
+  </body>
 </html>
