--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Yu-Man Tam - Home</title>
   </head>
 
