--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <td class="wsite-multicol-col" style="width:66.295546558704%; padding:0 15px;">
 					
     <div class="paragraph" style="text-align:left;">
-    <font size="4"><strong>Financial Economist</strong></font><br>
+    <font size="4"><strong>Senior Financial Economist</strong></font><br>
     <font size="4"><strong>Division of Market Risk Analysis</strong></font><br>
     <font size="4"><strong>Office of the Comptroller of the Currency</strong></font><br>
     <font size="4"><strong>U.S. Department of Treasury</strong></font><br><br>
